@@ -1,7 +1,9 @@
 #In the following we have the functions
-# getReampleExtract2: Returns a feasable function we can use as extract in resample() for each specific learner class. All is handled recursively because we have wrapped learners. So getResampleExtract2 builds a list of all appliable functions
+# - getReampleExtract2: Returns a feasable function we can use as extract in resample() for each specific learner class. 
+#   All is handled recursively because we have wrapped learners. 
+#   getResampleExtract2 returns a list of all appliable functions
 #
-# getResampleExtract converts the list of functions obtained by getResampleExtract2 to a single function which returns a list of each function result.
+# - getResampleExtract converts the list of functions obtained by getResampleExtract2 to a single function which returns a list of each function result.
 
 getResampleExtract2 = function(learner) {
   UseMethod("getResampleExtract2")
@@ -34,6 +36,10 @@ getResampleExtract2.FilterWrapper = function(learner) {
 getResampleExtract = function(learner){
   functions = getResampleExtract2(learner)
   function(x) {
-    lapply(functions, function(fun) fun(x))
-  }
+    if (length(functions) == 1L) {
+      functions[[1L]](x)
+    } else {
+      lapply(functions, function(fun) fun(x))
+    }
+  }  
 }
