@@ -16,31 +16,31 @@ resample(learner, task, resampling, measures, weights = NULL,
   show.info = getMlrOption("show.info"))
 
 crossval(learner, task, iters = 10L, stratify = FALSE, measures,
-  models = FALSE, keep.pred = TRUE, ...,
+  models = FALSE, keep.pred = TRUE, extract = NULL, ...,
   show.info = getMlrOption("show.info"))
 
 repcv(learner, task, folds = 10L, reps = 10L, stratify = FALSE, measures,
-  models = FALSE, keep.pred = TRUE, ...,
+  models = FALSE, keep.pred = TRUE, extract = NULL, ...,
   show.info = getMlrOption("show.info"))
 
 holdout(learner, task, split = 2/3, stratify = FALSE, measures,
-  models = FALSE, keep.pred = TRUE, ...,
+  models = FALSE, keep.pred = TRUE, extract = NULL, ...,
   show.info = getMlrOption("show.info"))
 
 subsample(learner, task, iters = 30, split = 2/3, stratify = FALSE,
-  measures, models = FALSE, keep.pred = TRUE, ...,
+  measures, models = FALSE, keep.pred = TRUE, extract = NULL, ...,
   show.info = getMlrOption("show.info"))
 
 bootstrapOOB(learner, task, iters = 30, stratify = FALSE, measures,
-  models = FALSE, keep.pred = TRUE, ...,
+  models = FALSE, keep.pred = TRUE, extract = NULL, ...,
   show.info = getMlrOption("show.info"))
 
 bootstrapB632(learner, task, iters = 30, stratify = FALSE, measures,
-  models = FALSE, keep.pred = TRUE, ...,
+  models = FALSE, keep.pred = TRUE, extract = NULL, ...,
   show.info = getMlrOption("show.info"))
 
 bootstrapB632plus(learner, task, iters = 30, stratify = FALSE, measures,
-  models = FALSE, keep.pred = TRUE, ...,
+  models = FALSE, keep.pred = TRUE, extract = NULL, ...,
   show.info = getMlrOption("show.info"))
 }
 \arguments{
